--- a/year_1/practice/rules
+++ b/year_1/practice/rules
@@ -1,15 +1,15 @@
-# 1 time, on
-a ON, a ON -> a ON
+a ON, a ON -> a ON   # 1 time, on
 a-1 ON, a ON -> a-1 OFF, a ON
-# 1 time, off
-a OFF, a OFF -> a OFF
-# 2 times, off (a-1 doesnt matter)
-a OFF, b OFF -> b OFF
-# 2 times, on
-a ON, b ON -> a ON, b-1 ON, b ON
+
+a OFF, a OFF -> a OFF  # 1 time, off
+a OFF, b OFF -> b OFF  # 2 times, off (a-1 doesnt matter)
+
+a ON, b ON -> a ON, b-1 ON, b ON  # 2 times, on
+
 # 1 time, on off at the same time
 a OFF, a ON -> a-1 OFF, a ON
 a ON, a OFF -> a-1 OFF, a ON
+
 # identity functions
 a ON, b OFF -> a ON, b OFF
 a OFF, b ON -> a ON, b OFF
