I fucked up my arch install

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "cSpell.enabled": true,
-    "cSpell.language": "en,en-US,ru-RU,ru"
+    "cSpell.language": "en,en-US,ru-RU,ru",
+    "python.formatting.provider": "black"
 }
